--- a/lab1-veb/index.html
+++ b/lab1-veb/index.html
@@ -83,5 +83,16 @@ kubsu-dev.ru</div>
             <div class="description">С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsdev.ru,</div>
         </div>
     </div>
+
+    <h2>Задание 5</h2>
+    <div class="screenshots">
+            <div class="description">с помощью
+SSH склонировать репозитарий со скриншотами и страницей в каталог www. Веб-
+страница должна открываться по адресу http://ваш_логин.kubsudev.ru/каталог_задания_1/
+                <br> <a href="http://u82312.kubsu-dev.ru/lab1/veb-lab1/"></a> </br>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
