--- a/lab1-veb/index.html
+++ b/lab1-veb/index.html
@@ -80,7 +80,7 @@ kubsu-dev.ru</div>
          <div class="screenshot-item">
             <img src="poto-datareg.png">
         </div>
-            <div class="description">С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsdev.ru,</div>
+            <div class="description">С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsdev.ru</div>
         </div>
     </div>
 
@@ -96,3 +96,4 @@ SSH склонировать репозитарий со скриншотами 
 </body>
 
 </html>
+
