--- a/lab1-veb/index.html
+++ b/lab1-veb/index.html
@@ -80,7 +80,7 @@ kubsu-dev.ru</div>
          <div class="screenshot-item">
             <img src="poto-datareg.png">
         </div>
-            <div class="description">С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsdev.ru</div>
+            <div class="description">С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsdev.ru,</div>
         </div>
     </div>
 
@@ -88,12 +88,21 @@ kubsu-dev.ru</div>
     <div class="screenshots">
             <div class="description">с помощью
 SSH склонировать репозитарий со скриншотами и страницей в каталог www. Веб-
-страница должна открываться по адресу http://ваш_логин.kubsudev.ru/каталог_задания_1/
-                <br> <a href="http://u82312.kubsu-dev.ru/lab1/veb-lab1/"></a> </br>
+страница должна открываться по адресу http://ваш_логин.kubsudev.ru/каталог_задания_1/
+                <ul><br> <a href="http://u82312.kubsu-dev.ru/lab1/veb-lab1/">u82312.kubsu-dev.ru</a> </br> </ul>
             </div>
         </div>
     </div>
+
+    <h2>Задание 6</h2>
+    <div class="screenshots">
+        <div class="screenshot-item">
+            <img src="poto6.png">
+            <div class="description"> С помощью программы FileZilla или любого другого клиента SFTP соединиться с
+учебным сервером с вашим логином и паролем по протоколу SFTP и скопировать на
+локальный компьютер файлы задания из каталога www.</div>
+        </div>
+    </div>
+
 </body>
-
 </html>
-
